--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,6 +17,7 @@
     overflow: hidden;
   }
 }
+
 canvas {
   width: 100%;
   height: 100%;
@@ -34,4 +35,8 @@ body {
   height: 100vh;
   margin: 0;
   background-color: black;
+}
+
+.marquee {
+  animation: marquee 5s linear infinite;
 }
