--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -18,9 +18,13 @@
   }
 }
 
+.main-container {
+  @apply absolute lg:border-2 border-white p-7 left-0 right-0 mr-auto w-96 mt-4 ml-4 lg:mt-24 lg:ml-9 md:ml-14;
+}
+
 canvas {
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   outline: none;
   display: block;
   cursor: grab;
